# dj-urls-panel

./: .gitignore  404.html  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/workflows/: python-publish.yml  test.yml
configuration/: index.html
development/: index.html
dj_urls_panel/: admin.py  apps.py  conf.py  models.py  panel.py  urls.py  utils.py  views.py
dj_urls_panel/static/admin/dj_urls_panel/: styles.css
dj_urls_panel/static/dj_urls_panel/css/: styles.css
dj_urls_panel/templates/admin/dj_urls_panel/: base.html  detail.html  detail_card.html  detail_serializer_info.html  detail_testing_interface.html  detail_testing_scripts.html  detail_usage_examples.html  index.html
dj_urls_panel/templatetags/: dj_urls_panel_tags.py
docs/: configuration.md  development.md  features.md  index.md  installation.md
example_project/: Dockerfile
example_project/api/: admin.py  models.py  serializers.py  urls.py  views.py
example_project/api/migrations/: 0001_initial.py
example_project/example_project/: settings.py  urls.py
features/: index.html
installation/: index.html
search/: search_index.json
tests/: base.py  conftest.py  test_admin.py  test_panel.py  test_pattern_cleaning.py  test_url_testing.py  test_viewset_serializer.py
